--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Personal Training Website</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="logo">
+            <p>My Logo</p>
+        </div>
+        <h1>Personal Traning</h1>
+        <na class="nav-items">
+            <a href="">Training</a>
+            <a href="">About us</a>
+            <a href="">Contact</a>
+        </na>
+
+    </header>
+
+    <footer>
+
+    <main>
+
+    </main>
+        
+    </footer>
+
 </body>
 </html>
